# qavr

./: .gitignore  CMakeLists.txt  README.md  TODO.ru  qavr.qrc
cmake/: win32-x-mingw32.cmake
data/: CMakeLists.txt  about.html
data/mcu/: at90can128.ini  at90can32.ini  at90can64.ini  at90pwm2.ini  at90pwm2b.ini  at90pwm3.ini  at90pwm3b.ini  at90s1200.ini  at90s2313.ini  at90s2343.ini  at90s4414.ini  at90s4433.ini  at90s4434.ini  at90s8515.ini  at90s8535.ini  at90usb1286.ini  at90usb1287.ini  at90usb162.ini  at90usb646.ini  at90usb647.ini  at90usb82.ini  atmega103.ini  atmega128.ini  atmega1280.ini  atmega1281.ini  atmega1284p.ini  atmega128rfa1.ini  atmega16.ini  atmega161.ini  atmega162.ini  atmega163.ini  atmega164p.ini  atmega168.ini  atmega169.ini  atmega2560.ini  atmega2561.ini  atmega32.ini  atmega324p.ini  atmega325.ini  atmega3250.ini  (+47 more)
data/mcu/bad/: at86rf401.ini  at89s51.ini  at89s52.ini  at90pwm216.ini  at90pwm316.ini  at90pwm81.ini  at90s2323.ini  at90s8515comp.ini  at90s8535comp.ini  at90scr100h.ini  atmega103comp.ini  atmega128a.ini  atmega161comp.ini  atmega164pa.ini  atmega165.ini  atmega165p.ini  atmega165pa.ini  atmega168p.ini  atmega168pa.ini  atmega169p.ini  atmega169pa.ini  (+53 more)
scripts/: git-gen-gitinfo.sh  project.conf  win32-cross.sh  win32-pack.sh
src/: CMakeLists.txt  avrdudeprocess.cpp  avrdudeprocess.h  bitscellwidget.cpp  bitscellwidget.h  fuseprocess.cpp  fuseprocess.h  main.cpp  qavr.cpp  qavr.h  qavr.ui  util.cpp  util.h  version.h
utils/xmlparts/: avrdude-mcu-list.sh  avrdude-prog-list.sh  main.cpp  sort-bad-parts.sh  xmlparts.pro
